--- a/loadingview/build.gradle
+++ b/loadingview/build.gradle
@@ -1,6 +1,13 @@
 apply plugin: 'com.android.library'
+
 apply plugin: 'kotlin-android'
+
 apply plugin: 'kotlin-android-extensions'
+
+apply plugin: 'com.github.dcendents.android-maven'
+
+group='com.github.TimChenDev'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
@@ -9,8 +16,8 @@ android {
     defaultConfig {
         minSdkVersion 23
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        versionCode 110
+        versionName "1.1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
